# cfgable-matmul

./: .gitignore  Cargo.toml  README.md  build.rs  profile.json
src/: dense_dot.rs  dense_dot_pack_a.rs  impl_aodmao2rho.rs  impl_matmul.rs  impl_matmul_mask_k_for_b.rs  impl_matmul_non0tab.rs  lib.rs  naive_simd.rs  non0tab_dot_loops.rs  non0tab_dot_microkernel.rs  prelude.rs  principle-loops.md  structs.rs
tests/: naive_matmul.rs
