[package]
name = "showcase-non0tab-contract"
version = "0.1.0"
edition = "2024"

[dependencies]
libcint = "0.2"
rayon = "1.11"
duplicate = "2.0"
num = "0.4"
faer = "0.22"
rstsr = { version = "0.6", features = ["openblas"] }
rstsr-openblas = { version = "0.6", features = ["openmp"] }

[profile.dev]
opt-level = 3
